# moscato

./: CODEOWNERS  README.md  data.json  pyproject.toml
.github/workflows/: validation.yaml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_773823e0962db27a___init___py.html
src/moscato/: __init__.py
tests/: test_noop.py
